[package]
name = "kvs"
version = "0.1.0"
authors = ["Spencer Leslie <spencerdleslie@gmail.com>"]
description = "A key value store - from pcap tutorials"
edition = "2018"

[dependencies]
structopt = "0.2"
failure = "0.1.5"
failure_derive = "0.1.5"
serde = "1.0.92"
bincode = "1.1.4"
memmap = "0.6.2"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"